# Genesis_VLA

./: README.md
examples/rigid/: accelerometer_duck.py
examples/tutorials/: hello_genesis.py
genesis/assets/urdf/UR3_manipulator/: CMakeLists.txt  package.xml
genesis/assets/urdf/UR3_manipulator/urdf/: UR3_manipulator.urdf
